--- a/DemoLoginAnimation/Base.lproj/Main.storyboard
+++ b/DemoLoginAnimation/Base.lproj/Main.storyboard
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aZD-Cr-w0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="qN9-KW-JYJ">
+            <objects>
+                <navigationController navigationBarHidden="YES" id="aZD-Cr-w0r" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qAA-bG-0Bx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="5AV-tg-hb3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NB3-NP-B9t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-436" y="387"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -17,36 +35,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Access code" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Geq-aC-hUd">
-                                <rect key="frame" x="16" y="48" width="568" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="real" translatesAutoresizingMaskIntoConstraints="NO" id="f0V-Kf-Zd7">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="a3w-7P-lwe">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Access code" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Geq-aC-hUd">
+                                        <rect key="frame" x="16" y="60" width="568" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="NYS-5w-UZn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tm6-cv-1li">
+                                        <rect key="frame" x="16" y="120" width="568" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="Y5Y-qk-DxE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="9cR-vT-oC0"/>
+                                    <constraint firstItem="Geq-aC-hUd" firstAttribute="leading" secondItem="a3w-7P-lwe" secondAttribute="leading" constant="16" id="5bT-FM-PeR"/>
+                                    <constraint firstItem="Tm6-cv-1li" firstAttribute="leading" secondItem="a3w-7P-lwe" secondAttribute="leading" constant="16" id="AGV-5z-tia"/>
+                                    <constraint firstAttribute="trailing" secondItem="Geq-aC-hUd" secondAttribute="trailing" constant="16" id="BxU-Tu-acf"/>
+                                    <constraint firstAttribute="bottom" secondItem="Tm6-cv-1li" secondAttribute="bottom" constant="459" id="JbB-NV-udL"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tm6-cv-1li" secondAttribute="trailing" constant="16" id="l0g-M6-sco"/>
+                                    <constraint firstItem="Geq-aC-hUd" firstAttribute="top" secondItem="a3w-7P-lwe" secondAttribute="top" constant="60" id="mfw-dd-luQ"/>
+                                    <constraint firstAttribute="centerX" secondItem="Tm6-cv-1li" secondAttribute="centerX" id="nqF-rb-4hI"/>
+                                    <constraint firstItem="Tm6-cv-1li" firstAttribute="top" secondItem="Geq-aC-hUd" secondAttribute="bottom" constant="30" id="sv1-1j-MmO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tm6-cv-1li">
-                                <rect key="frame" x="16" y="96" width="568" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="JQW-6w-an9"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Geq-aC-hUd" secondAttribute="trailing" constant="16" id="Ca1-uM-HAL"/>
-                            <constraint firstItem="Geq-aC-hUd" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="HD9-9n-MIQ"/>
-                            <constraint firstItem="Tm6-cv-1li" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="OoF-50-cV2"/>
-                            <constraint firstItem="Tm6-cv-1li" firstAttribute="top" secondItem="Geq-aC-hUd" secondAttribute="bottom" constant="18" id="mXd-Hn-4Yf"/>
-                            <constraint firstAttribute="trailing" secondItem="Tm6-cv-1li" secondAttribute="trailing" constant="16" id="rL0-Rq-wEm"/>
-                            <constraint firstItem="Geq-aC-hUd" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="28" id="rWS-JT-hAV"/>
+                            <constraint firstItem="a3w-7P-lwe" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="hcW-j6-Eo2"/>
+                            <constraint firstItem="f0V-Kf-Zd7" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="hdJ-oZ-JSr"/>
+                            <constraint firstAttribute="trailing" secondItem="f0V-Kf-Zd7" secondAttribute="trailing" id="jze-fv-bwI"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="f0V-Kf-Zd7" secondAttribute="bottom" id="l87-zu-S8P"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="a3w-7P-lwe" secondAttribute="bottom" id="ozZ-iK-J0I"/>
+                            <constraint firstItem="f0V-Kf-Zd7" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="uNW-QL-2lW"/>
+                            <constraint firstAttribute="trailing" secondItem="a3w-7P-lwe" secondAttribute="trailing" id="ugP-bW-6NF"/>
+                            <constraint firstItem="a3w-7P-lwe" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="vlv-kR-5pf"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Z0W-Kv-vmB"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="lblStatus" destination="Tm6-cv-1li" id="4aH-x8-MsA"/>
+                        <outlet property="scrView" destination="a3w-7P-lwe" id="Rxf-Te-Gmh"/>
                         <outlet property="txtCode" destination="Geq-aC-hUd" id="APc-aI-gUE"/>
                     </connections>
                 </viewController>
@@ -54,4 +95,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="real" width="900" height="506"/>
+    </resources>
 </document>
